--- a/recapitulatif.html
+++ b/recapitulatif.html
@@ -13,36 +13,12 @@
     <table class="board">
         <thead>
             <tr>
-                <th>Joueur</th>
-                <th>Kills</th>
-                <th>Assistances</th>
-                <th>Morts</th>
+                <th>Erreur</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>aeguoa</td>
-                <td>45</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>aeguoa</td>
-                <td>45</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>aeguoa</td>
-                <td>45</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>aeguoa</td>
-                <td>45</td>
-                <td>5</td>
-                <td>5</td>
+                <td>Vous n'avez pas étudié le match</td>
             </tr>
         </tbody>
     </table>
