Ajout ratio Tué/Mort et autres changements mineurs

--- a/menu.html
+++ b/menu.html
@@ -5,21 +5,24 @@
     <meta charset="utf-8">
     <title>Menu</title>
     <link rel="stylesheet" href="css/style.css">
-
 </header>
+
 <body>
-    <h1>Menu principal</h1>
-    <div class="container2" data-tilt data-tilt-scale="1.1" >
-        <div class="card2">
-          <div class="content2">
-            <h2>NSI</h2>
-            <h3>CS:GO</h3>
-            <p>Cliquez ici afin de débuter l'analyse du match !</p>
-            <a href="play.html">Commencer</a>
-          </div>
-        </div>
+  <h1>Menu principal</h1>
+  <div class="container2" id="a" data-tilt data-tilt-scale="1.1">
+    <div class="card2" id="a">
+      <div class="content2">
+        <h2>NSI</h2>
+        <h3>CS:GO</h3>
+        <p>Cliquez ici afin de débuter l'analyse du match !</p>
+        <a onclick="clicked()">Commencer</a>
+      </div>
+    </div>
+  </div>
+
 </body>
-<script src="assets/js/vanilla-conf.js"></script>
-<script type="text/javascript" src="assets/js/vanilla-tilt.js"></script>
+
+<script type="text/javascript" src="js/vanilla-tilt.js"></script>
+<script type="text/javascript" src="js/script-menu.js"></script>
 
 </html>
