--- a/recapitulatif.html
+++ b/recapitulatif.html
@@ -24,7 +24,8 @@
     </table>
     
     <div class="center">
-        <a class="bigbutton" href="menu.html">Retour</a>
+        <a class="bigbutton" href="play.html">Analyser le match à nouveau</a>
+        <a class="bigbutton" href="menu.html">Menu Principal</a>
     </div>
 
     <script src="js/script-recapitulatif.js"></script>
