--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,10 @@
     </div>
   </div>
 
+  <div class="center">
+    <a class="bigbutton" href="recapitulatifs.html">Récapitulatifs de tous les matchs</a>
+  </div>
+
 </body>
 
 <script type="text/javascript" src="js/vanilla-tilt.js"></script>
